[package]
name = "include-dir-macro"
version = "0.2.0"
edition = "2018"
authors = [
  "J. Cliff Dyer <jcd@sdf.org>",
  "Jonathan Klimt <jonathan.klimt@rwth-aachen.de>",
]
description = "Provides a macro to include a directory tree of files in the compiled binary"
repository = "https://github.com/jcdyer/include-dir-macro"
license = "Apache-2.0"

[dependencies]
syn = "0.11"
quote = "0.3"

rocket = { version = "0.5", optional = true }
tree_magic = { version = "0.2", optional = true }
heapless = { version = "0.8.0", optional = true }

[features]
web = ["rocket", "tree_magic"]
no_std = ["dep:heapless"]

[lib]
proc-macro = true

[[example]]
name = "web"
required-features = ["web"]
edition = "2018"

[[example]]
name = "poems"
edition = "2018"
